--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <p>あいうえお</p>
+  <textarea id="anki_csv">ここにankiのcsvのデータをペースト</textarea>
+  <textarea id="input">Paste some text here</textarea>
+  <p>Paste some text here</p>
   <script src="build/main.js"></script>
 </body>
 </html>
