Add: HTML titles

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <title>English-Level-Checker</title>
 </head>
 <body>
-  <p>あいうえお</p>
-  <textarea id="anki_csv">ここにankiのcsvのデータをペースト</textarea>
-  <textarea id="input">Paste some text here</textarea>
-  <p>Paste some text here</p>
+  <h1>English-Level-Checker</h1>
+
+  <h2>CSVデータ読み込み</h2>
+  <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト"></textarea>
+
+  <h2>英文を入力する</h2>
+  <input type="text" id="input" placeholder="Paste some text here...">
   <script src="build/main.js"></script>
 </body>
 </html>
