Fix: follow HTML5 semantics

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
   <title>English-Level-Checker</title>
 </head>
 <body>
-  <h1>English-Level-Checker</h1>
+  <main>
+    <h1>English-Level-Checker</h1>
 
-  <h2>CSVデータ読み込み</h2>
-  <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト"></textarea>
-
-  <h2>英文を入力する</h2>
-  <input type="text" id="input" placeholder="Paste some text here...">
+    <section class="import_anki_csv">
+      <h2>ankiのCSVデータ読み込み</h2>
+      <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト"></textarea>
+    </section>
+    
+    <section class="input_english">
+      <h2>英文を入力する</h2>
+      <input type="text" id="input" placeholder="Paste some text here...">
+    </section>
+  </main>
   <script src="build/main.js"></script>
 </body>
 </html>
