Add: textarea size restriction

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="import_anki_csv">
       <h2>ankiのCSVデータ読み込み</h2>
-      <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト"></textarea>
+      <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト" spellcheck="false"></textarea>
     </section>
     
     <section class="input_english">
