--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <h2>ankiのCSVデータ読み込み</h2>
       <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト" spellcheck="false"></textarea>
     </section>
-    
+
     <section class="input_english">
       <h2>英文を入力する</h2>
       <input type="text" id="input" placeholder="Paste some text here...">
     </section>
   </main>
-  <script src="build/main.js"></script>
+  <script src="./build/main.js"></script>
 </body>
 </html>
