--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       <h2>英文を入力する</h2>
       <input type="text" id="input" placeholder="Paste some text here...">
     </section>
+
+    <section class="result">
+      <h2>結果</h2>
+      <div id="resultdisplay_main"></div>
+    </section>
   </main>
   <script src="./build/main.js"></script>
 </body>
