--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     <section class="import_anki_csv">
       <h2>ankiのCSVデータ読み込み</h2>
-      <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト" spellcheck="false"></textarea>
+      <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト" spellcheck="false" autocomplete="off"></textarea>
     </section>
 
     <section class="input_english">
       <h2>英文を入力する</h2>
-      <input type="text" id="input" placeholder="Paste some text here...">
+      <input type="text" id="input" placeholder="Paste some text here..." autocomplete="off">
     </section>
 
     <section class="result">
