--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <section class="result">
       <h2>結果</h2>
       <div id="resultdisplay_main"></div>
+      <input type="range" id="level" min="1" max="10000" value="1" >
     </section>
   </main>
   <script src="./build/main.js"></script>
