--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <section class="import_anki_csv">
       <h2>ankiのCSVデータ読み込み</h2>
       <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト" spellcheck="false" autocomplete="off"></textarea>
+      <button id="anki_csv_refresh">データを更新</button>
     </section>
 
     <section class="input_english">
