--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <section class="import_anki_csv">
       <h2>ankiのCSVデータ読み込み</h2>
+      <input type="file" id="import_anki_csv_file" accept=".csv">
       <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト" spellcheck="false" autocomplete="off"></textarea>
     </section>
 
