--- a/index.html
+++ b/index.html
@@ -14,11 +14,23 @@
   <main>
     <h1>English-Level-Checker</h1>
 
-    <section class="import_anki_csv">
-      <h2>ankiのCSVデータ読み込み</h2>
-      <input type="file" id="import_anki_csv_file" accept=".csv">
-      <textarea id="anki_csv" placeholder="ここにankiのcsvのデータをペースト" spellcheck="false" autocomplete="off"></textarea>
-      <button id="anki_csv_refresh">データを更新</button>
+    <section class="import_anki_txt">
+      <h2>ankiのtxtデータ読み込み</h2>
+      <div style="display: flex;">
+        <div id="anki_setting" style="margin-left: 10px;">
+          <section>
+            <p>英単語の列</p>
+            <input id="anki_setting_english_col" placeholder="英単語の列">
+          </section>
+          <section>
+            <p>日本語訳の列</p>
+            <input id="anki_setting_japanese_col" placeholder="日本語訳の列">
+          </section>
+        </div>
+        <input type="file" id="import_anki_txt_file" accept=".txt" style="width: 300px; height: fit-content;">
+      </div>
+      <textarea id="anki_txt" placeholder="ここにankiのtxtのデータをペースト" spellcheck="false" autocomplete="off"></textarea>
+      <button id="anki_txt_refresh">データを更新</button>
     </section>
 
     <section class="input_english">
@@ -29,7 +41,7 @@
     <section class="result">
       <h2>結果</h2>
       <div style="display: flex;">
-        <input type="range" id="level" min="1" max="1" value="1">
+        <input type="range" id="level" min="0" max="1" value="1">
         <span id="range_value">1</span>
       </div>
       <div id="resultdisplay_main"></div>
